--- a/src/app/template/basicos/basicos.component.html
+++ b/src/app/template/basicos/basicos.component.html
@@ -3,12 +3,13 @@
 
 <div class="row">
   <div class="col">
-    <form>
+    <form (ngSubmit)="guardar(form)" #form="ngForm">
       <!-- campo producto -->
       <div class="mb-3 row">
         <label for="producto" class="col-sm-3 col-form-label">Productos</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" id="producto" placeholder="Nombre del producto">
+          <input type="text" class="form-control" id="producto" placeholder="Nombre del producto" name="producto"
+            ngModel autocomplete="off" required>
           <span class="form-text text-danger">Debe de ser de 3 letras</span>
         </div>
       </div>
@@ -17,7 +18,8 @@
       <div class="mb-3 row">
         <label for="precio" class="col-sm-3 col-form-label">Precio</label>
         <div class="col-sm-9">
-          <input type="number" class="form-control" id="precio" placeholder="Precio del producto">
+          <input type="number" class="form-control" id="precio" placeholder="Precio del producto" name="precio" ngModel
+            required>
         </div>
       </div>
 
@@ -25,7 +27,8 @@
       <div class="mb-3 row">
         <label for="existencias" class="col-sm-3 col-form-label">Existencias</label>
         <div class="col-sm-9">
-          <input type="number" class="form-control" id="existencias" placeholder="Stock del producto">
+          <input type="number" class="form-control" id="existencias" placeholder="Stock del producto" name="existencias"
+            ngModel required>
         </div>
       </div>
 
@@ -36,5 +39,15 @@
       </div>
 
     </form>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+    <span>Valid</span>
+    <pre>{{ form.valid | json }}</pre>
+
+    <span>Value</span>
+    <pre>{{ form.value | json }}</pre>
   </div>
 </div>
