--- a/src/app/template/basicos/basicos.component.html
+++ b/src/app/template/basicos/basicos.component.html
@@ -3,14 +3,16 @@
 
 <div class="row">
   <div class="col">
-    <form (ngSubmit)="guardar(form)" #form="ngForm">
+    <form (ngSubmit)="guardar()" #miFormulario="ngForm">
       <!-- campo producto -->
       <div class="mb-3 row">
         <label for="producto" class="col-sm-3 col-form-label">Productos</label>
         <div class="col-sm-9">
+
           <input type="text" class="form-control" id="producto" placeholder="Nombre del producto" name="producto"
-            ngModel autocomplete="off" required>
-          <span class="form-text text-danger">Debe de ser de 3 letras</span>
+            ngModel autocomplete="off" required minlength="3">
+
+          <span *ngIf="nombreValido()" class="form-text text-danger">Debe de ser de 3 letras</span>
         </div>
       </div>
 
@@ -45,9 +47,15 @@
 <div class="row">
   <div class="col">
     <span>Valid</span>
-    <pre>{{ form.valid | json }}</pre>
+    <pre>{{ miFormulario.valid | json }}</pre>
+
+    <span>pristine</span>
+    <pre>{{ miFormulario.pristine | json }}</pre>
+
+    <span>touched</span>
+    <pre>{{ miFormulario.touched | json }}</pre>
 
     <span>Value</span>
-    <pre>{{ form.value | json }}</pre>
+    <pre>{{ miFormulario.value | json }}</pre>
   </div>
 </div>
