--- a/src/app/template/basicos/basicos.component.html
+++ b/src/app/template/basicos/basicos.component.html
@@ -22,6 +22,8 @@
         <div class="col-sm-9">
           <input type="number" class="form-control" id="precio" placeholder="Precio del producto" name="precio" ngModel
             required>
+
+          <span *ngIf="precioValido()" class="form-text text-danger">El precio debe ser mayor o igual a 0</span>
         </div>
       </div>
 
@@ -36,7 +38,7 @@
 
       <div class="row">
         <div class="col">
-          <button type="submit" class="btn btn-primary float-end">Guardar</button>
+          <button type="submit" [disabled]="miFormulario.invalid" class="btn btn-primary float-end">Guardar</button>
         </div>
       </div>
 
