--- a/src/app/template/basicos/basicos.component.html
+++ b/src/app/template/basicos/basicos.component.html
@@ -22,7 +22,6 @@
         <div class="col-sm-9">
           <input type="number" class="form-control" id="precio" placeholder="Precio del producto" name="precio" ngModel
             required>
-
           <span *ngIf="precioValido()" class="form-text text-danger">El precio debe ser mayor o igual a 0</span>
         </div>
       </div>
@@ -32,7 +31,7 @@
         <label for="existencias" class="col-sm-3 col-form-label">Existencias</label>
         <div class="col-sm-9">
           <input type="number" class="form-control" id="existencias" placeholder="Stock del producto" name="existencias"
-            ngModel required>
+            ngModel required customMin [minimo]="0">
         </div>
       </div>
 
