--- a/src/app/template/dinamicos/dinamicos.component.html
+++ b/src/app/template/dinamicos/dinamicos.component.html
@@ -1,1 +1,43 @@
-<p>dinamicos works!</p>
+<h2>Template: <small>Dinámicos</small></h2>
+<hr>
+
+<form (ngSubmit)="guardar()" autocomplete="off" #miFormulario="ngForm">
+
+  <!-- campo nombre -->
+  <div class="row mb-3">
+    <label for="nombre" class="col-sm-3 col-form-label">Nombre</label>
+    <div class="col-sm-9">
+      <input type="text" class="form-control" placeholder="Nombre de la persona" required name="nombre" ngModel>
+      <span *ngIf="validarNombre()" class="form-text text-danger">Este campo es obligatorio</span>
+    </div>
+  </div>
+
+  <!-- campo agregar -->
+  <div class="row mb-3">
+    <label for="nombre" class="col-sm-3 col-form-label">Agregar</label>
+    <div class="col-sm-9">
+
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Agregar favorito">
+        <button class="btn btn-outline-primary" type="button">Agregar</button>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- campo lista de juegos favoritos -->
+  <div class="row mb-3">
+    <label for="nombre" class="col-sm-3 col-form-label">Favoritos</label>
+    <div class="col-sm-9">
+      <input type="text" class="form-control mb-1">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-12">
+      <button type="button" class="btn btn-primary float-end" (click)="guardar()"
+        [disabled]="miFormulario.invalid">Guardar</button>
+    </div>
+  </div>
+
+</form>
