--- a/src/app/template/dinamicos/dinamicos.component.html
+++ b/src/app/template/dinamicos/dinamicos.component.html
@@ -7,7 +7,8 @@
   <div class="row mb-3">
     <label for="nombre" class="col-sm-3 col-form-label">Nombre</label>
     <div class="col-sm-9">
-      <input type="text" class="form-control" placeholder="Nombre de la persona" required name="nombre" ngModel>
+      <input type="text" class="form-control" placeholder="Nombre de la persona" required name="nombre"
+        [ngModel]="persona.nombre">
       <span *ngIf="validarNombre()" class="form-text text-danger">Este campo es obligatorio</span>
     </div>
   </div>
@@ -18,7 +19,7 @@
     <div class="col-sm-9">
 
       <div class="input-group">
-        <input type="text" class="form-control" placeholder="Agregar favorito">
+        <input type="text" class="form-control" placeholder="Agregar favorito" name="favorito">
         <button class="btn btn-outline-primary" type="button">Agregar</button>
       </div>
 
@@ -29,7 +30,10 @@
   <div class="row mb-3">
     <label for="nombre" class="col-sm-3 col-form-label">Favoritos</label>
     <div class="col-sm-9">
-      <input type="text" class="form-control mb-1">
+      <div class="input-group mb-1" *ngFor="let favorito of persona.favoritos; let i = index">
+        <input type="text" name="favorito_{{i}}" class="form-control" required [(ngModel)]="favorito.nombre">
+        <button class="btn btn-outline-danger" type="button" (click)="eliminar(i)">Eliminar</button>
+      </div>
     </div>
   </div>
 
@@ -41,3 +45,6 @@
   </div>
 
 </form>
+
+<span>Persona</span>
+<pre>{{ persona | json }}</pre>
