--- a/src/app/template/switches/switches.component.html
+++ b/src/app/template/switches/switches.component.html
@@ -1,1 +1,50 @@
-<p>switches works!</p>
+<h2>Template: <small>Switches</small></h2>
+<hr>
+
+<form #miFormulario="ngForm">
+  <!-- radios -->
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Género</label>
+    <div class="col-sm-9">
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="radioGenero" id="radioMasculino">
+        <label class="form-check-label" for="radioMasculino">
+          Masculino
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="radioGenero" id="radioFemenino">
+        <label class="form-check-label" for="radioFemenino">
+          Femenino
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <!-- swtiches -->
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Notificaciones</label>
+    <div class="col-sm-9">
+      <div class="form-check form-switch mt-2">
+        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked">
+        <label class="form-check-label" for="flexSwitchCheckChecked">Recibir notificaciones</label>
+      </div>
+    </div>
+  </div>
+
+  <!-- checks -->
+  <div class="form-check">
+    <input class="form-check-input" type="checkbox" id="flexCheckDefault">
+    <label class="form-check-label" for="flexCheckDefault">
+      Términos y condiciones de uso
+    </label>
+  </div>
+
+  <!-- submit -->
+  <div class="row mt-3 float-end">
+    <div class="col">
+      <button type="submit" class="btn btn-primary">Enviar</button>
+    </div>
+  </div>
+
+</form>
