--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -1,1 +1,61 @@
-<p>basicos works!</p>
+<h2>Reactivos: <small>Básicos</small></h2>
+<hr>
+
+<div class="row">
+  <div class="col">
+    <form autocomplete="off" [formGroup]="miFormulario">
+      <!-- campo producto -->
+      <div class="mb-3 row">
+        <label for="producto" class="col-sm-3 col-form-label">Productos</label>
+        <div class="col-sm-9">
+
+          <input type="text" class="form-control" id="producto" placeholder="Nombre del producto" autocomplete="off"
+            formControlName="nombre">
+          <span class="form-text text-danger">Debe de ser de 3 letras</span>
+        </div>
+      </div>
+
+      <!-- campo precio -->
+      <div class="mb-3 row">
+        <label for="precio" class="col-sm-3 col-form-label">Precio</label>
+        <div class="col-sm-9">
+          <input type="number" class="form-control" id="precio" placeholder="Precio del producto"
+            formControlName="precio">
+          <span class="form-text text-danger">El precio debe ser mayor o igual a 0</span>
+        </div>
+      </div>
+
+      <!-- existencias -->
+      <div class="mb-3 row">
+        <label for="existencias" class="col-sm-3 col-form-label">Existencias</label>
+        <div class="col-sm-9">
+          <input type="number" class="form-control" id="existencias" placeholder="Stock del producto"
+            formControlName="existencias">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <button type="submit" class="btn btn-primary float-end">Guardar</button>
+        </div>
+      </div>
+
+    </form>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+    <span>Valid</span>
+    <pre>{{ miFormulario.valid | json }}</pre>
+
+    <span>pristine</span>
+    <pre>{{ miFormulario.pristine | json }}</pre>
+
+    <span>touched</span>
+    <pre>{{ miFormulario.touched | json }}</pre>
+
+    <span>Value</span>
+    <pre>{{ miFormulario.value | json }}</pre>
+  </div>
+</div>
