--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,48 @@
-<p>dinamicos works!</p>
+<h2>Reactivos: <small>Dinámicos</small></h2>
+<hr>
+
+<form autocomplete="off">
+
+  <!-- campo nombre -->
+  <div class="row mb-3">
+    <label for="nombre" class="col-sm-3 col-form-label">Nombre</label>
+    <div class="col-sm-9">
+      <input type="text" class="form-control" placeholder="Nombre de la persona">
+      <span class="form-text text-danger">Este campo es obligatorio</span>
+    </div>
+  </div>
+
+  <!-- campo agregar -->
+  <div class="row mb-3">
+    <label for="nombre" class="col-sm-3 col-form-label">Agregar</label>
+    <div class="col-sm-9">
+
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Agregar favorito" name="favorito">
+        <button class="btn btn-outline-primary" type="button">Agregar</button>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- campo lista de juegos favoritos -->
+  <div class="row mb-3">
+    <label for="nombre" class="col-sm-3 col-form-label">Favoritos</label>
+    <div class="col-sm-9">
+      <div class="input-group mb-1">
+        <input type="text" class="form-control">
+        <button class="btn btn-outline-danger" type="button">Eliminar</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-12">
+      <button type="button" class="btn btn-primary float-end">Guardar</button>
+    </div>
+  </div>
+
+</form>
+
+<!-- <span>Persona</span>
+<pre>{{ persona | json }}</pre> -->
