--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -36,7 +36,7 @@
 
       <div class="row">
         <div class="col">
-          <button type="submit" class="btn btn-primary float-end">Guardar</button>
+          <button type="submit" [disabled]="miFormulario.invalid" class="btn btn-primary float-end">Guardar</button>
         </div>
       </div>
 
