--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -11,7 +11,8 @@
 
           <input type="text" class="form-control" id="producto" placeholder="Nombre del producto" autocomplete="off"
             formControlName="nombre">
-          <span class="form-text text-danger">Debe de ser de 3 letras</span>
+          <span *ngIf="campoNoValido('nombre')" class="form-text text-danger">Debe de ser de 3
+            letras</span>
         </div>
       </div>
 
@@ -21,7 +22,8 @@
         <div class="col-sm-9">
           <input type="number" class="form-control" id="precio" placeholder="Precio del producto"
             formControlName="precio">
-          <span class="form-text text-danger">El precio debe ser mayor o igual a 0</span>
+          <span class="form-text text-danger" *ngIf="campoNoValido('precio')">El precio debe ser mayor o igual a
+            0</span>
         </div>
       </div>
 
@@ -31,6 +33,8 @@
         <div class="col-sm-9">
           <input type="number" class="form-control" id="existencias" placeholder="Stock del producto"
             formControlName="existencias">
+          <span class="form-text text-danger" *ngIf="campoNoValido('existencias')">Las existencias debe ser mayor o
+            igual a 0</span>
         </div>
       </div>
 
