--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col">
-    <form autocomplete="off" [formGroup]="miFormulario">
+    <form autocomplete="off" (ngSubmit)="guardar()" [formGroup]="miFormulario">
       <!-- campo producto -->
       <div class="mb-3 row">
         <label for="producto" class="col-sm-3 col-form-label">Productos</label>
@@ -40,7 +40,7 @@
 
       <div class="row">
         <div class="col">
-          <button type="submit" [disabled]="miFormulario.invalid" class="btn btn-primary float-end">Guardar</button>
+          <button type="submit" class="btn btn-primary float-end">Guardar</button>
         </div>
       </div>
 
