--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -34,7 +34,7 @@
     <div class="col-sm-9" formArrayName="favoritos">
       <div class="input-group mb-1" *ngFor="let favorito of favoritosArr.controls; let i = index">
         <input type="text" class="form-control" [formControlName]="i">
-        <button class="btn btn-outline-danger" type="button">Eliminar</button>
+        <button class="btn btn-outline-danger" type="button" (click)="eliminarFavorito(i)">Eliminar</button>
       </div>
     </div>
 
